--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
             android:layout_gravity="center"
             android:layout_margin="10dp"
             app:cardElevation="15dp"
+            android:onClick="upload_img_btn"
             android:id="@+id/uploadImage">
 
             <LinearLayout
@@ -119,6 +120,7 @@
             android:layout_gravity="center"
             app:cardElevation="15dp"
             android:layout_margin="10dp"
+            android:onClick="upload_pdf"
             android:id="@+id/uploadEbook">
 
             <LinearLayout
@@ -162,6 +164,7 @@
             android:layout_height="150dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
+            android:onClick="faculty_btn"
             app:cardElevation="15dp"
             android:id="@+id/updateFaculty">
 
